<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Menu Activity Strings -->
    <string name="app_name">Mémoria, o Jogo</string>
    <string name="choose_level_text">Escolha a dificuldade:</string>
    <string name="btn_level_1">Fácil</string>
    <string name="btn_level_2">Normal</string>
    <string name="btn_level_3">Difícil</string>
    <string name="btn_ranking">Ranking</string>
    <string name="btn_options">Opções</string>
    
    <!-- Options Activity String -->
    <string name="btn_restart_rankings">Reiniciar Rankings</string>
    <string name="btn_email_contact_list">Enviar Lista de Contatos</string>
    
    <!-- Finish Game Fragment Strings -->
    <string name="user_email_hint">Email</string>
    <string name="user_name_hint">Nome</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_text1">Você fez </string>
    <string name="dialog_text2"> pontos! Parabéns!</string>
    <string name="dialog_text3">Preencha seus dados para entrar no ranking.</string>
    
    <!-- MemoGame Activity Strings -->
    <string name="timer_starting_value">10:00</string>
    <string name="points_starting_value">0000000</string>
    <string name="bonus_starting_value">0000000</string>
    <string name="memo_activity_title">Jogando</string>
    
    <!-- Boolean Dialog Strings -->
    <string name="boolean_dialog_ok">OK</string>
    <string name="boolean_dialog_cancel">Cancelar</string>
    
    <string name="leave_game_confirmation">Você está abandonando o jogo atual, e todos seus pontos serão perdidos.</string>
    <string name="restart_rankings_text">Todos os dados de jogos serão perdidos e os rankings serão preenchidos pelos dados padrão.</string>
    
    <!-- Email Strings -->
    <string name="email_contact_text">Lista de Contatos: \n\n</string>
    
    <!-- Image Content Description -->
    <string name="main_logo_description">HE:mobile</string>
    <string name="card_front">Frente da carta</string>
    <string name="card_back">Fundo da carta</string>
</resources>
