<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/menu_container_side_margin"
    android:layout_marginRight="@dimen/menu_container_side_margin"
    android:layout_marginTop="@dimen/menu_container_top_margin" >

    <TextView
        android:id="@+id/hello_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_level_text"
        android:layout_alignParentTop="true"
        android:textColor="@color/White"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/btnLevel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_level_btn_separator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/hello_view"
        android:text="@string/btn_level_1" />

    <Button
        android:id="@+id/btnLevel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_level_btn_separator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/btnLevel1"
        android:text="@string/btn_level_2" />
    
    <Button
        android:id="@+id/btnLevel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_level_btn_separator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/btnLevel2"
        android:text="@string/btn_level_3" />
    
    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLevel3"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/menu_other_btn_separator"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/main_logo_description" />
    
    <Button
        android:id="@+id/btnRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_other_btn_separator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/mainLogo"
        android:text="@string/btn_ranking" />
    
    <Button
        android:id="@+id/btnOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/menu_other_btn_separator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/btnRanking"
        android:text="@string/btn_options" />
    
</RelativeLayout>