<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/rankings_margin"
    android:layout_marginRight="@dimen/rankings_margin"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="@dimen/rankings_margin"
		android:orientation="vertical"
		android:layout_weight="1">
	    
        <TextView 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/rankings_padding"
	        android:textSize="@dimen/big_text_size"
	        android:textColor="@color/White"
	        android:gravity="center_horizontal"
	        android:text="@string/btn_level_1"
	        android:background="@color/HERed"
    	/>
    
		<ListView
			android:id="@+id/level1Rankings"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/White"
		/>
    </LinearLayout>
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="@dimen/rankings_margin"
		android:orientation="vertical"
		android:layout_weight="1">
	    
        <TextView 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/rankings_padding"
	        android:textSize="@dimen/big_text_size"
	        android:textColor="@color/White"
	        android:gravity="center_horizontal"
	        android:text="@string/btn_level_2"
	        android:background="@color/HERed"
    	/>
    
		<ListView
			android:id="@+id/level2Rankings"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/White"
		/>
    </LinearLayout>
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="@dimen/rankings_margin"
		android:orientation="vertical"
		android:layout_weight="1">
	    
        <TextView 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/rankings_padding"
	        android:textSize="@dimen/big_text_size"
	        android:textColor="@color/White"
	        android:gravity="center_horizontal"
	        android:text="@string/btn_level_3"
	        android:background="@color/HERed"
    	/>
    
		<ListView
			android:id="@+id/level3Rankings"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/White"
		/>
    </LinearLayout>
</LinearLayout>